--- a/flask app/templates/base.html
+++ b/flask app/templates/base.html
@@ -37,6 +37,7 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/solar">Solar Data</a></li>
+            <li><a href="/wind">Wind Data</a></li>
             <li><a href="/contact">Contact</a></li>
         </ul>
     </nav>
