--- a/flask app/templates/home.html
+++ b/flask app/templates/home.html
@@ -3,7 +3,7 @@
 {% block title %}Home Page{% endblock %}
 
 {% block content %}
-    <h1>Welcome to the Home Page</h1>
+    <h1>Virtual Power Plant Toolkit</h1>
 
     <form method="post">
 
