--- a/flask app/templates/wind.html
+++ b/flask app/templates/wind.html
@@ -9,12 +9,17 @@
     <div style="width: 48%;">
         <h1>Wind Input Data</h1>
         <table style="width: 100%; border-collapse: collapse;">
+            
             <tr style="background-color: #f2f2f2;">
                 <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Parameter</th>
                 <th style="border: 1px solid #ddd; padding: 8px; text-align: left;">Value</th>
             </tr>
-        
             <tr>
+                <td style="border: 1px solid #ddd; padding: 8px;">Number of Aeolos Turbines</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">{{ num_turbines | round(0) }}</td>
+            </tr>
+        
+            <tr style="background-color: #edf3ff;">
                 <td style="border: 1px solid #ddd; padding: 8px;">Postal Code</td>
                 <td style="border: 1px solid #ddd; padding: 8px;">{{ postal_code }}</td>
             </tr>
@@ -43,6 +48,7 @@
                 <td style="border: 1px solid #ddd; padding: 8px;">System Capacity (kW)</td>
                 <td style="border: 1px solid #ddd; padding: 8px;">100343.00</td>
             </tr>
+            
             
             
         </table>
