--- a/flask app/templates/home.html
+++ b/flask app/templates/home.html
@@ -157,7 +157,7 @@
                 <td>PREMIUM PROTECT BS-575-144M10NHB-GG</td>
                 <td>575W</td>
                 <td>22.26%</td>
-                <td>$0.54 / W</td>
+                <td>$0.45 / W </td>
                 <td><a href="{{ url_for('static', filename='datasheets/Bauer-Solar-CANSOLAR (1).pdf') }}" target="_blank">Data Sheet PDF</a></td>
             </tr>
 
@@ -190,11 +190,37 @@
                     <a href="{{ url_for('static', filename='datasheets/Ficha-Tecnica-Mega-Pack (1).pdf') }}" target="_blank">Data Sheet PDF</a>
                 </td>
             </tr>
+            <tr>
+                <td>Solar Roof Mounts Installed</td>
+                <td>OPSUN</td>
+                <td>SunRail Performance (Landscape)</td>
+                <td>N/A</td>
+                <td>N/A</td>
+                <td>$0.41 / W</td>
+                <td>
+                    <a href="{{ url_for('static', filename='datasheets/brochure-performance.pdf') }}" target="_blank">Brochure PDF</a>
+                    <p> </p>
+                    <a href="{{ url_for('static', filename='datasheets/sunrail-installation-manual.pdf') }}" target="_blank">Installation PDF</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Solar Carport Canopies Installed</td>
+                <td>OPSUN</td>
+                <td>SunPark Commercial</td>
+                <td>N/A</td>
+                <td>N/A</td>
+                <td>$1.57 / W</td>
+                <td>
+                    <a href="{{ url_for('static', filename='datasheets/brochure-sunpark-comercial.pdf') }}" target="_blank">Brochure PDF</a>
+                    <p> </p>
+                    <a href="{{ url_for('static', filename='datasheets/sunpark-installation-manual.pdf') }}" target="_blank">Installation PDF</a>
+                </td>
+            </tr>
 
         </tbody>
     </table>
     <br><br>
-    
+
     <script>
         document.querySelector('form').addEventListener('submit', function(e) {
             e.preventDefault();  // Prevent the default form submission
