wind height speed fitting

--- a/flask app/templates/wind.html
+++ b/flask app/templates/wind.html
@@ -18,6 +18,10 @@
                 <td style="border: 1px solid #ddd; padding: 8px;">Number of Aeolos Turbines</td>
                 <td style="border: 1px solid #ddd; padding: 8px;">{{ num_turbines | round(0) }}</td>
             </tr>
+            <tr>
+                <td style="border: 1px solid #ddd; padding: 8px;">Turbine hieght (m)</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">{{ turbine_height | round(0) }}</td>
+            </tr>
         
             <tr style="background-color: #edf3ff;">
                 <td style="border: 1px solid #ddd; padding: 8px;">Postal Code</td>
