added location page

--- a/flask app/templates/base.html
+++ b/flask app/templates/base.html
@@ -36,6 +36,7 @@
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
+            <li><a href="/location">Location Info</a></li>
             <li><a href="/solar">Solar Data</a></li>
             <li><a href="/wind">Wind Data</a></li>
             <li><a href="/contact">Contact</a></li>
