added location page

--- a/flask app/templates/location.html
+++ b/flask app/templates/location.html
@@ -12,7 +12,7 @@
     <p><strong>Distance to Nearest Station:</strong> {{ distance }} meters</p>
 
     {% if latitude and longitude %}
-    <h2>Location on Map</h2>
+    <h2>Site Location on Map</h2>
     <!-- Replace 'YOUR_API_KEY' with your actual Google Maps API key -->
     <iframe
         width="600"
