added upfront costs and num solar

--- a/flask app/templates/base.html
+++ b/flask app/templates/base.html
@@ -39,6 +39,7 @@
             <li><a href="/location">Location Info</a></li>
             <li><a href="/solar">Solar Data</a></li>
             <li><a href="/wind">Wind Data</a></li>
+            <li><a href="/battery">Battery Data</a></li>
             <li><a href="/contact">Contact</a></li>
         </ul>
     </nav>
