--- a/flask app/templates/wind.html
+++ b/flask app/templates/wind.html
@@ -22,7 +22,7 @@
                 <td style="border: 1px solid #ddd; padding: 8px;">Turbine hieght (m)</td>
                 <td style="border: 1px solid #ddd; padding: 8px;">{{ turbine_height | round(0) }}</td>
             </tr>
-        
+           
           
            
             
@@ -46,7 +46,10 @@
                 <td style="border: 1px solid #ddd; padding: 8px;">Yearly Wind Generation (kWh)</td>
                 <td style="border: 1px solid #ddd; padding: 8px;">{{ total_yearly_generation | round(2) }}</td>
             </tr>
-            
+            <tr>
+                <td style="border: 1px solid #ddd; padding: 8px;">Upfront Cost [CAD]</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">${{ wind_cost | round(2) }}</td>
+            </tr>
             
         </table>
     </div>
