added sens analysis to toolkit

--- a/flask app/templates/home.html
+++ b/flask app/templates/home.html
@@ -100,7 +100,7 @@
 
         <label for="arrayType">Array Type:</label>
         <select id="arrayType" name="arrayType">
-            <option value=0>Fixed Open Rack</option>
+            <option value=0>Fixed Carport</option>
             <option value=1>Fixed - Roof Mounted</option>
             <option value=2>1-Axis Tracking</option>
             <option value=3>1-Axis Backtracking</option>
