added sens analysis to toolkit

--- a/flask app/templates/solar.html
+++ b/flask app/templates/solar.html
@@ -84,7 +84,7 @@
     <div>{{ plot5|safe }}</div>
 
     <br><br>
-    <h1>Solar Financial Plots </h1>
+    <h1>Solar Financial Analysis </h1>
     <div>{{ solar_payback_plot|safe }}</div>
     <br>
     <div>{{ solar_ROI_plot|safe }}</div>
