--- a/flask app/templates/wind.html
+++ b/flask app/templates/wind.html
@@ -88,7 +88,7 @@
 
 
 <br><br>
-<h1>wind Financial Plots </h1>
+<h1>Wind Financial Analysis </h1>
 <div>{{ wind_payback_plot|safe }}</div>
 <br>
 <div>{{ wind_ROI_plot|safe }}</div>
