--- a/flask app/templates/base.html
+++ b/flask app/templates/base.html
@@ -40,6 +40,7 @@
             <li><a href="/solar">Solar Data</a></li>
             <li><a href="/wind">Wind Data</a></li>
             <li><a href="/battery">Battery Data</a></li>
+            <li><a href="/pricing">Pricing Data</a></li>
             <li><a href="/contact">Contact</a></li>
         </ul>
     </nav>
