additional equipment added

--- a/flask app/templates/home.html
+++ b/flask app/templates/home.html
@@ -167,7 +167,7 @@
                 <td>110 W</td>
                 <td>19.3%</td>
                 <td>$1.54 / W </td>
-                <td><a href="{{ url_for('static', filename='datasheets\Elios_Voltaic110F_Datasheet.pdf') }}" target="_blank">Data Sheet PDF</a></td>
+                <td><a href="{{ url_for('static', filename='datasheets/Elios_Voltaic110F_Datasheet.pdf') }}" target="_blank">Data Sheet PDF</a></td>
             </tr>
             <tr>
                 <td>Standard Monofacial Solar Panel</td>
@@ -177,11 +177,11 @@
                 <td>21.7%</td>
                 <td>$0.56 / W </td>
                 <td>
-                    <a href="{{ url_for('static', filename='datasheets\Datasheet_Longi_LR5-72HPH-535-555M_(frankensolar).pdf') }}" target="_blank">Data Sheet PDF</a>
+                    <a href="{{ url_for('static', filename='datasheets/Datasheet_Longi_LR5-72HPH-535-555M_(frankensolar).pdf') }}" target="_blank">Data Sheet PDF</a>
                     <br>
-                    <a href="{{ url_for('static', filename='datasheets\Warranty_Longi_PV-Modules-(HE-Single-Glass-series)-V09_(frankensolar).pdf') }}" target="_blank">Warranty PDF</a>
+                    <a href="{{ url_for('static', filename='datasheets/Warranty_Longi_PV-Modules-(HE-Single-Glass-series)-V09_(frankensolar).pdf') }}" target="_blank">Warranty PDF</a>
                     <br>
-                    <a href="{{ url_for('static', filename='datasheets\Manual_Longi_LR4-LR5-LR6_(frankensolar).pdf') }}" target="_blank">Installation Manual PDF</a>
+                    <a href="{{ url_for('static', filename='datasheets/Manual_Longi_LR4-LR5-LR6_(frankensolar).pdf') }}" target="_blank">Installation Manual PDF</a>
                 
                 </td>
             </tr>
@@ -215,7 +215,7 @@
                     <a href="{{ url_for('static', filename='datasheets/Ficha-Tecnica-Mega-Pack (1).pdf') }}" target="_blank">Data Sheet PDF</a>
                 </td>
             </tr>
-            
+
             <tr>
                 <td>Solar Roof Mounts Installed</td>
                 <td>OPSUN</td>
@@ -252,11 +252,11 @@
                 <td>
                     <a href="https://shop.frankensolar.ca/deger-single-axis-tracker-s100-pf-sr/?fbclid=IwAR1FCOOvEGMhTpIcCcf50EqkNAdciozC_mvKGZXN4mfcLhx14Pa-NvXApeI_aem_AdLjDNyyXs0_Xp0HdUkvktyECSWV57aEubDkYvsXQe-jQ6VnPYSlzGsTCFXyZcbf2ATz5GduVw4i1UwmuNbwqOqD" target="_blank">Single Axis Mount Website</a>
                     <br>
-                    <a href="{{ url_for('static', filename='datasheets\Datasheet_DEGER_MLD-Control-EK-S1-2019-06_(frankensolar).pdf') }}" target="_blank">Controller Assembly Info PDF</a>
+                    <a href="{{ url_for('static', filename='datasheets/Datasheet_DEGER_MLD-Control-EK-S1-2019-06_(frankensolar).pdf') }}" target="_blank">Controller Assembly Info PDF</a>
                     <br>
-                    <a href="{{ url_for('static', filename='datasheets\Datasheet_DEGER_S100-SR-Datasheet-EN-2020-06_(frankensolar).pdf') }}" target="_blank">Datasheet PDF</a>
+                    <a href="{{ url_for('static', filename='datasheets/Datasheet_DEGER_S100-SR-Datasheet-EN-2020-06_(frankensolar).pdf') }}" target="_blank">Datasheet PDF</a>
                     <br>
-                    <a href="{{ url_for('static', filename='datasheets\Tool_DEGER_Planning-Tool-Canada-V6.0_(frankensolar).xls') }}" target="_blank">Deger Tracking Mount Planning Tool</a>
+                    <a href="{{ url_for('static', filename='datasheets/Tool_DEGER_Planning-Tool-Canada-V6.0_(frankensolar).xls') }}" target="_blank">Deger Tracking Mount Planning Tool</a>
 
                 </td>
             </tr>
@@ -266,15 +266,15 @@
                 <td>Dual Axis Tracker D100H</td>
                 <td>~ 21,220.0 W</td>
                 <td>N/A</td>
-                <td>$16,987.82 / Unit <br>$0.27 / W</td>
+                <td>$16,987.82 / Unit <br>$1.15 / W</td>
                 <td>
                     <a href="https://shop.frankensolar.ca/deger-single-axis-tracker-s100-pf-sr/?fbclid=IwAR1FCOOvEGMhTpIcCcf50EqkNAdciozC_mvKGZXN4mfcLhx14Pa-NvXApeI_aem_AdLjDNyyXs0_Xp0HdUkvktyECSWV57aEubDkYvsXQe-jQ6VnPYSlzGsTCFXyZcbf2ATz5GduVw4i1UwmuNbwqOqD" target="_blank">Single Axis Mount Website</a>
                     <br>
-                    <a href="{{ url_for('static', filename='datasheets\Datasheet_DEGER_MLD-Control-EK-S1-2019-06_(frankensolar).pdf') }}" target="_blank">Controller Assembly Info PDF</a>
+                    <a href="{{ url_for('static', filename='datasheets/Datasheet_DEGER_MLD-Control-EK-S1-2019-06_(frankensolar).pdf') }}" target="_blank">Controller Assembly Info PDF</a>
                     <br>
-                    <a href="{{ url_for('static', filename='datasheets\Datasheet_DEGER_D-Series-CAN-Datasheet-2022-01_(frankensolar).pdf') }}" target="_blank">Datasheet PDF</a>
+                    <a href="{{ url_for('static', filename='datasheets/Datasheet_DEGER_D-Series-CAN-Datasheet-2022-01_(frankensolar).pdf') }}" target="_blank">Datasheet PDF</a>
                     <br>
-                    <a href="{{ url_for('static', filename='datasheets\Tool_DEGER_Planning-Tool-Canada-V6.0_(frankensolar).xls') }}" target="_blank">Deger Tracking Mount Planning Tool</a>
+                    <a href="{{ url_for('static', filename='datasheets/Tool_DEGER_Planning-Tool-Canada-V6.0_(frankensolar).xls') }}" target="_blank">Deger Tracking Mount Planning Tool</a>
 
                 </td>
             </tr>
