--- a/damien_flask_app/templates/home.html
+++ b/damien_flask_app/templates/home.html
@@ -86,59 +86,79 @@
         tr:nth-child(even) {
             background-color: #f9f9f9;
         }
+
+        .form-container {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 10px; /* Adjust spacing between columns */
+        }
+
     </style>
 
     <h1>Virtual Power Plant Toolkit</h1>
+    <h3>Solar Inputs</h3>
+<div class="form-container">
+    <div>
+        <form method="post">
+            <label for="surfaceArea">Surface Area (m<sup>2</sup>):</label>
+            <input type="number" id="surfaceArea" name="surfaceArea"><br><br>
 
+            <label for="arrayType">Array Type:</label>
+            <select id="arrayType" name="arrayType">
+                <option value=0>Fixed Carport</option>
+                <option value=1>Fixed - Roof Mounted</option>
+                <option value=2>1-Axis Tracking</option>
+                <option value=3>1-Axis Backtracking</option>
+                <option value=4>2-Axis</option>
+            </select><br><br>
+
+            <label for="moduleType">Module Type:</label>
+            <select id="moduleType" name="moduleType">
+                <option value=0>Standard</option>
+                <option value=1>Premium</option>
+                <option value=2>Thin Film</option>
+            </select><br><br>
+
+            <label for="tilt">Tilt (0 to 90 degrees):</label>
+            <input type="range" id="tilt" name="tilt" min="0" max="90" step="1" oninput="this.nextElementSibling.value = this.value">
+            <output>45</output><br><br>
+
+            <label for="postalCode">Postal Code:</label>
+            <input type="text" id="postalCode" name="postalCode" pattern="[A-Za-z0-9]{3,}"><br><br>
+        </form>
+    </div>
+
+    <div>
+        <form method="post">
+            <label for="panelSize">Size of Panels [W]:</label>
+            <input type="number" id="panelSize" name="panelSize">
+            <h5>*NOTE* CANSOLAR panel size: 575 [W]</h5>
+
+            <label for="costPanels">Cost of Panels [$CAD/W]:</label>
+            <input type="number" id="costPanels" name="costPanels">
+            <h5>*NOTE* CANSOLAR 575 W panel cost: 0.40-0.45 [$CAD/W]</h5>
+        </form>
+    </div>
+
+    <div>
+        <form method="post">
+            <label for="roofInst">Cost of Roof Installation [$CAD/W]:</label>
+            <input type="number" id="roofInst" name="roofInst">
+            <h5>*NOTE* OPSUN performance (bifacial panels) rooftop installation cost: 0.32-0.41 [$CAD/W]</h5>
+            <h5>OPSUN budget (darker areas) rooftop installation: 0.23-0.29 [$CAD/W]</h5>
+
+            <label for="carportInst">Cost of Carport Installation [$CAD/W]:</label>
+            <input type="number" id="carportInst" name="carportInst">
+            <h5>*NOTE* The Hayter Group carport installation approx.: 10x rooftop installation [$CAD/W]</h5>
+            <h5>OPSUN carport installation cost: 1.30-1.57 [$CAD/W] (foundation and installation excluded)</h5>
+        </form>
+    </div>
+</div>
+      
     <form method="post">
-        <h3>Solar Inputs</h3>
-        <label for="surfaceArea">Surface Area (m<sup>2</sup>):</label>
-        <input type="number" id="surfaceArea" name="surfaceArea"><br><br>
-
-        <label for="arrayType">Array Type:</label>
-        <select id="arrayType" name="arrayType">
-            <option value=0>Fixed Carport</option>
-            <option value=1>Fixed - Roof Mounted</option>
-            <option value=2>1-Axis Tracking</option>
-            <option value=3>1-Axis Backtracking</option>
-            <option value=4>2-Axis</option>
-        </select><br><br>
-
-        <label for="moduleType">Module Type:</label>
-        <select id="moduleType" name="moduleType">
-            <option value=0>Standard</option>
-            <option value=1>Premium</option>
-            <option value=2>Thin Film</option>
-        </select><br><br>
-
-        <label for="panelSize">Cost of Panels [W]:</label>
-        <input type="number" id="panelSize" name="panelSize"><br><br>
-        <p>*NOTE* CANSOLAR panel size: 575 W</p>
-
-        <label for="costPanels">Cost of Panels [$CAD/W]:</label>
-        <input type="number" id="costPanels" name="costPanels"><br><br>
-        <p>*NOTE* CANSOLAR 575 W panel cost: 0.40-0.45 [$CAD/W]</p>
-
-        <label for="roofInst">Cost of Roof Installation [$CAD/W]:</label>
-        <input type="number" id="roofInst" name="roofInst"><br><br>
-        <p>*NOTE* OPSUN performance (bifacial panels) rooftop installation cost: 0.32-0.41 [$CAD/W]</p>
-        <p>OPSUN budget (darker areas) rooftop installation: 0.23-0.29 [$CAD/W]</p>
-
-        <label for="carportInst">Cost of Carport Installation [$CAD/W]:</label>
-        <input type="number" id="carportInst" name="carportInst"><br><br>
-        <p>*NOTE* The Hayter Group carport installation approx.: 10x rooftop installation [$CAD/W]</p>
-        <p>OPSUN carport installation cost: 1.30-1.57 [$CAD/W] (foundation and installation excluded)</p>
-
-        <label for="tilt">Tilt (0 to 90 degrees):</label>
-        <input type="range" id="tilt" name="tilt" min="0" max="90" step="1" oninput="this.nextElementSibling.value = this.value">
-        <output>45</output><br><br>
-
-        <label for="postalCode">Postal Code:</label>
-        <input type="text" id="postalCode" name="postalCode" pattern="[A-Za-z0-9]{3,}"><br><br>
-        
         <h3>Wind Inputs</h3>
         <label for="numTurbines">Number of Wind Turbines:</label>
-        <input type="number" id="numTurbines" name="numTurbines" min="1" step="1">
+        <input type="number" id="numTurbines" name="numTurbines" min="0" step="1">
         <br><br>
         
         <label for="turbineHeight">Turbine Height:</label>
